# tbd-example

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: linting.yaml  pypi_publish.yaml  testing.yaml
tbd_example/: main.py
tests/unit/: test_main.py
